--- a/index.html
+++ b/index.html
@@ -134,17 +134,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <a href="#">
-                        <img src="assets/img/event1.jpeg" alt="Xリンクバナー">
-                    </a>
-                </div>
-                <div class="swiper-slide">
-                    <a href="#">
-                        <img src="assets/img/event2.jpeg" alt="姉妹店バナー">
+                        <img src="assets/img/banner1.png" alt="Xリンクバナー">
                     </a>
                 </div>
                 <div class="swiper-slide">
                     <a href="recruit-info.html">
-                        <img src="assets/img/event3.jpeg" alt="求人情報バナー">
+                        <img src="assets/img/banner2.png" alt="求人情報バナー">
                     </a>
                 </div>
             </div>
@@ -327,5 +322,6 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
