--- a/index.html
+++ b/index.html
@@ -134,12 +134,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <a href="#">
-                        <img src="assets/img/banner1.png" alt="Xリンクバナー">
+                        <img src="assets/img/event.png" alt="Xリンクバナー">
                     </a>
                 </div>
                 <div class="swiper-slide">
                     <a href="recruit-info.html">
-                        <img src="assets/img/banner2.png" alt="求人情報バナー">
+                        <img src="assets/img/event.png" alt="求人情報バナー">
                     </a>
                 </div>
             </div>
@@ -169,16 +169,10 @@
     <!-- 料金・システムセクション -->
     <section class="price-section section-margin fade-section" id="section_price">
         <div class="section-inner">
-
-            <!-- セクションタイトル -->
-            <h2 class="section-title pricing">✧ コース料金 ✧</h2>
-
-            <!-- イメージ画像 -->
+            <h2 class="section-title pricing"><span>コース料金</span></h2>
             <div class="price-image">
                 <img src="assets/img/price-image.jpeg" alt="癒しのイメージ画像">
             </div>
-
-            <!-- 料金テーブル -->
             <table class="price-table">
                 <tbody>
                     <tr>
@@ -196,8 +190,27 @@
                         <td class="separator">›››</td>
                         <td class="course-price">20,000円</td>
                     </tr>
+                </tbody>
+            </table>
+
+            <!-- オプション見出し -->
+            <h2 class="section-title pricing option-title"><span>オプション料金</span></h2>
+
+            <!-- オプション料金テーブル -->
+            <table class="price-table option-table">
+                <tbody>
                     <tr>
-                        <td class="course-name">延長　30分</td>
+                        <td class="course-name">指名料</td>
+                        <td class="separator">›››</td>
+                        <td class="course-price">1,000円</td>
+                    </tr>
+                    <tr>
+                        <td class="course-name">本指名</td>
+                        <td class="separator">›››</td>
+                        <td class="course-price">2,000円</td>
+                    </tr>
+                    <tr>
+                        <td class="course-name">延長 30分</td>
                         <td class="separator">›››</td>
                         <td class="course-price">6,000円</td>
                     </tr>
@@ -205,12 +218,12 @@
             </table>
         </div>
 
-        <div class="price-image">
+        <div class="price-imag">
             <img src="assets/img/kessai.png" alt="クレジットカード">
         </div>
 
     </section>
-
+    
     <!-- 店舗情報セクション -->
     <section id="section_shopinfo" class="shopinfo_section section-margin fade-section">
         <h2 class="section-title">ACCESS</h2>
@@ -322,6 +335,5 @@
     <script src="assets/js/main.js"></script>
 
 </body>
-
 
 </html>
