--- a/price-system.html
+++ b/price-system.html
@@ -71,7 +71,7 @@
         <!-- 料金・システムセクション -->
         <section class="price-section section-margin fade-section" id="section_price">
             <div class="section-inner">
-                <h2 class="section-title pricing">✧ コース料金 ✧</h2>
+                <h2 class="section-title pricing"><span>コース料金</span></h2>
                 <div class="price-image">
                     <img src="assets/img/price-image.jpeg" alt="癒しのイメージ画像">
                 </div>
@@ -92,8 +92,27 @@
                             <td class="separator">›››</td>
                             <td class="course-price">20,000円</td>
                         </tr>
+                    </tbody>
+                </table>
+
+                <!-- オプション見出し -->
+                <h2 class="section-title pricing option-title"><span>オプション料金</span></h2>
+
+                <!-- オプション料金テーブル -->
+                <table class="price-table option-table">
+                    <tbody>
                         <tr>
-                            <td class="course-name">延長　30分</td>
+                            <td class="course-name">指名料</td>
+                            <td class="separator">›››</td>
+                            <td class="course-price">1,000円</td>
+                        </tr>
+                        <tr>
+                            <td class="course-name">本指名</td>
+                            <td class="separator">›››</td>
+                            <td class="course-price">2,000円</td>
+                        </tr>
+                        <tr>
+                            <td class="course-name">延長 30分</td>
                             <td class="separator">›››</td>
                             <td class="course-price">6,000円</td>
                         </tr>
@@ -101,7 +120,7 @@
                 </table>
             </div>
 
-            <div class="price-image">
+            <div class="price-imag">
                 <img src="assets/img/kessai.png" alt="クレジットカード">
             </div>
 
