--- a/therapist-profile.html
+++ b/therapist-profile.html
@@ -57,9 +57,9 @@
                     <!-- メインスライダー -->
                     <div class="swiper profile-main">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/img/sab3.jpeg" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/sab2.jpeg" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/sab1.jpeg" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
                         </div>
                     </div>
 
@@ -209,5 +209,6 @@
     <!-- 自作JS（Swiperの初期化など） -->
     <script src="assets/js/main.js"></script>
 </body>
+
 
 </html>
