--- a/therapist-profile.html
+++ b/therapist-profile.html
@@ -66,9 +66,9 @@
                     <!-- サムネイルスライダー（すぐ下に配置） -->
                     <div class="swiper profile-thumbs">
                         <div class="swiper-wrapper">
-                            <div class="swiper-slide"><img src="assets/img/sab3.jpeg" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/sab2.jpeg" alt=""></div>
-                            <div class="swiper-slide"><img src="assets/img/sab1.jpeg" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
+                            <div class="swiper-slide"><img src="assets/img/sample.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -212,3 +212,4 @@
 
 
 </html>
+
