--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <div class="therapist-cards">
             <!-- ▼ セラピストカード：1人分 -->
-            <div class="therapist-card">
+            <a href="therapist-profile.html" class="therapist-card">
                 <div class="img-wrap">
                     <img src="assets/img/sample.png" alt="セラピスト写真">
                     <img src="assets/img/icon-x.png" alt="×" class="icon-x">
@@ -65,13 +65,13 @@
                 <div class="info">
                     <h3 class="name">さき（26）</h3>
                     <p class="size">T153 B83(D) W57 H82</p>
-                    <div class="tags">
-                        <span class="tag tag-pink">新人</span>
-                        <span class="tag tag-blue">美白</span>
-                        <span class="tag tag-yellow">指名率No.1</span>
-                    </div>
                 </div>
-            </div>
+                <div class="tags">
+                    <span class="tag tag-pink">新人</span>
+                    <span class="tag tag-blue">美白</span>
+                     <span class="tag tag-yellow">指名率No.1</span>
+                </div>
+            </a>
             <!-- ▼ セラピストカード：2人分 -->
             <a href="therapist-profile.html" class="therapist-card">
                 <div class="img-wrap">
@@ -335,5 +335,6 @@
     <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
